--- a/templates/etc/exports.j2
+++ b/templates/etc/exports.j2
@@ -1,1 +1,1 @@
-/srv/nfs	{{ network_cidr }}(rw,sync,no_root_squash,no_subtree_check)
+/data	{{ network_cidr }}(rw,sync,no_root_squash,no_subtree_check)
